feat: Thêm PWA support, tính năng sửa bài viết và tối ưu animation
- Thêm PWA: manifest, service worker, install prompt
- Thêm tính năng sửa bài viết với UI/UX cải thiện
- Tối ưu animation: chỉ animation khi reload, transition nhẹ nhàng
- Custom server với auto port detection
- Cập nhật documentation

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,11 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
+# PWA build artifacts (if needed, uncomment)
+# /public/icon-*.png
+# /public/manifest.json
+# /public/sw.js
+
+# Scripts output
+# /scripts/
+
