update giao diện

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "VnSocial - Mạng xã hội phong cách Apple",
-  "short_name": "VnSocial",
+  "name": "Pora - Mạng xã hội phong cách Apple",
+  "short_name": "Pora",
   "description": "Mạng xã hội với thiết kế tối giản, sang trọng theo phong cách Apple",
   "start_url": "/pora/",
   "scope": "/pora/",
@@ -13,13 +13,25 @@
       "src": "/pora/icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png",
-      "purpose": "any maskable"
+      "purpose": "any"
     },
     {
       "src": "/pora/icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png",
-      "purpose": "any maskable"
+      "purpose": "any"
+    },
+    {
+      "src": "/pora/icon-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "maskable"
+    },
+    {
+      "src": "/pora/icon-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "maskable"
     }
   ],
   "categories": ["social", "networking"],
