--- a/package.json
+++ b/package.json
@@ -12,21 +12,21 @@
     "copy-pwa": "node scripts/copy-pwa-files.js"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "next": "^14.0.0",
+    "clsx": "^2.0.0",
+    "firebase": "^12.6.0",
     "framer-motion": "^10.16.4",
     "lucide-react": "^0.294.0",
-    "clsx": "^2.0.0"
+    "next": "^14.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "typescript": "^5.2.2",
     "@types/node": "^20.8.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
-    "tailwindcss": "^3.3.5"
+    "tailwindcss": "^3.3.5",
+    "typescript": "^5.2.2"
   }
 }
-
